# cupla

./: .gitlab-ci.yml  .gitmodules  .rodare.json  .travis.yml  CHANGELOG.md  CMakeLists.txt  INSTALL.md  README.md  cuplaConfig.cmake
alpaka/example/: CMakeLists.txt
alpaka/test/analysis/: CMakeLists.txt
alpaka/test/integ/: CMakeLists.txt
alpaka/test/unit/: CMakeLists.txt
cmake/: addExecutable.cmake  addLibrary.cmake  cuplaTargetHelper.cmake
doc/: PortingGuide.md  TuningGuide.md
example/CUDASamples/BlackScholes/: CMakeLists.txt
example/CUDASamples/asyncAPI/: CMakeLists.txt
example/CUDASamples/asyncAPI_tuned/: CMakeLists.txt
example/CUDASamples/matrixMul/: CMakeLists.txt
example/CUDASamples/vectorAdd/: CMakeLists.txt
include/: cuda_to_cupla.hpp  cupla_driver_types.hpp  cupla_runtime.hpp
include/cupla/: defines.hpp  device_functions.hpp  kernel.hpp  math.hpp  namespace.hpp  types.hpp  version.hpp
include/cupla/api/: common.hpp  device.hpp  event.hpp  memory.hpp  stream.hpp
include/cupla/config/: CpuOmp2Blocks.hpp  CpuOmp2Threads.hpp  CpuSerial.hpp  CpuTbbBlocks.hpp  CpuThreads.hpp  GpuCudaRt.hpp  GpuHipRt.hpp
include/cupla/cudaToCupla/: driverTypes.hpp  (+1 more)
script/: compiler_base.yml  install_clang.sh  run_test.sh
script/integration/: build_add_subdirectory.sh  build_add_subdirectory_third_party_alpaka.sh  build_find_package.sh  install_alpaka.sh  install_cupla.sh
src/: common.cpp  cuda_runtime.cpp  device.cpp  event.cpp  memory.cpp  stream.cpp
test/separate_compilation/: CMakeLists.txt
test/separate_compilation/src/: kernel.cpp  kernel.hpp
(+33 files in other folders)
